<resources>
    <string name="app_name">RxJava Application</string>
    <string name="natural_row">Natural row</string>
    <string name="fibonachi_row">Fibonachi</string>
    <string name="even_numbers">Even numbers</string>
    <string name="completable">Completable</string>
    <string name="single">Single</string>
    <string name="odd_number">Odd number?</string>
    <string name="maybe">Maybe</string>
</resources>